# mixed_array

./: Cargo.toml  readme.md
crates/mixed_struct_proc/: Cargo.toml
crates/mixed_struct_proc/src/: lib.rs
crates/mixed_type_proc/: Cargo.toml  readme.md
crates/mixed_type_proc/src/: lib.rs
examples/: simple.rs
src/: lib.rs
