[package]
name = "mixed_type_proc"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for creating generic mixed type enums."
repository = "https://github.com/andrewlowndes/mixed_array/crates/mixed_type_proc"
license = "MIT OR Apache-2.0"
keywords = ["mixed_type", "macros"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.64"
quote = "1.0.29"
syn = { version = "2.0.26", features = ["full"] }
